force-app/main/default/objects/cgcloud__Tour_Template__c/cgcloud__Tour_Template__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the tour template object, to be used for tours.</description>
    <label>Tour Template</label>
    <nameField>
        <label>Tour Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tour Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>