force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>