force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Cash_Check_In_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cash_Check_In_Required__c</fullName>
    <label>Cash Check In Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>