force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Consider_Mileage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Mileage__c</fullName>
    <description>Specifies whether the driver can or must document odometer information when beginning and finishing the tour.</description>
    <label>Consider Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>