force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Consider_Multiple_Warehouses__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Multiple_Warehouses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if more than one warehouse must be considered for the tour.</description>
    <label>Consider Multiple Warehouses</label>
    <type>Checkbox</type>
</CustomField>