force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Consider_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Vehicle__c</fullName>
    <description>Specifies whether the driver has to check license plate numbers of the truck and its trailers</description>
    <label>Consider Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
                <default>true</default>
                <label>Truck</label>
            </value>
            <value>
                <fullName>TruckTrailer</fullName>
            </value>
            <value>
                <fullName>TruckTrailers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>