force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Consider_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Vehicle_Status__c</fullName>
    <description>Specifies whether the driver has to check and document status / damages of the truck (and its trailers) at beginning and end of tour</description>
    <label>Consider Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>StatusReason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>