force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Creation_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Platform__c</fullName>
    <description>Defines the platform on which the template is used for creating tours.</description>
    <label>Creation Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
                <default>true</default>
                <label>Laptop</label>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>