force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Currency__c</fullName>
    <label>Default Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>