force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Is_Odometer_Photo_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Odometer_Photo_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user documents the odometer reading at start and end of the day with a picture.</description>
    <label>Odometer Photo Required</label>
    <type>Checkbox</type>
</CustomField>