force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Mobility_User_Guidance_Start_of_Day__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_User_Guidance_Start_of_Day__c</fullName>
    <description>Mobility User Guidance for Start Of Day Process</description>
    <label>Mobility User Guidance Start of Day</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>