force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Should_Allow_End_Day_Geofencing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Allow_End_Day_Geofencing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the validation of the user&apos;s GPS location against warehouse location is enabled at the end of the day.</description>
    <label>Allow End Day Geofencing</label>
    <type>Checkbox</type>
</CustomField>