force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Should_Allow_Seal_Scanning__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Allow_Seal_Scanning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user validates a list of seals through scanning or manual entry. This is applicable only when the Express Check-Out field is selected.</description>
    <label>Allow Seal Scanning</label>
    <type>Checkbox</type>
</CustomField>