force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Show_Cash_Info__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Show_Cash_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Cash Info</label>
    <type>Checkbox</type>
</CustomField>