force-app/main/default/objects/cgcloud__Tour_Template__c/fields/cgcloud__Sync_Options__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Options__c</fullName>
    <description>Specifies if an immediate background synchronization will be started after special event</description>
    <label>Sync Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>OnTourStart</fullName>
            </value>
            <value>
                <fullName>OnTourEnd</fullName>
            </value>
            <value>
                <fullName>OnTourEndStart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>